# project-template

./: .gitignore  README.md  changelog.md  mkdocs.yml  pyproject.toml
.github/workflows/: documentation.yml
docs/: index.md  reading-list.md  references.bib
docs/environment/: zsh.md
docs/examples/: using-jupyter.ipynb
docs/howto/: dependency-management.md  index.md
docs/python/: documentation.md
master/: 404.html  index.html  objects.inv  references.bib  sitemap.xml
master/changelog/: index.html
master/environment/: index.html
master/environment/git/: index.html
master/environment/ide/: index.html
master/environment/zsh/: index.html
master/examples/using-jupyter/: index.html
master/howto/: index.html
master/howto/dependency-management/: index.html
master/python/: index.html
master/python/awesome/: index.html
master/python/configuration/: index.html
master/python/documentation/: index.html
master/python/reproducibility/: index.html
master/reading-list/: index.html
master/reference/: index.html
master/reference/SUMMARY/: index.html
master/reference/functional/: index.html
master/roadmap/: index.html
master/scripts/: development.py  reference.py
master/scripts/development/: index.html
master/scripts/reference/: index.html
master/search/: search_index.json
template/: functional.py
